fixed background and overflow

--- a/src/index.css
+++ b/src/index.css
@@ -55,15 +55,16 @@ body {
   animation: scroll 400s linear infinite;
   background: url("https://images.unsplash.com/photo-1465146633011-14f8e0781093?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3450&q=80"),
     #111111;
+  background-attachment: fixed;
   color: #eee;
   height: 100vh;
   min-width: 360px;
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
   perspective: 1000px;
   perspective-origin: 50% 50%;
+  overflow: hidden;
 }
 
 @keyframes scroll {
@@ -89,5 +90,6 @@ body {
   opacity: .25;
   height: 100vh;
   width: 200vh;
+  overflow: hidden;
 }
 
